# O-G-Exec

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile
crates/refinery-lp/: Cargo.toml
crates/refinery-lp/src/: lib.rs  main.rs  model.rs  solve.rs
crates/sim/: Cargo.toml
crates/sim/src/: config.rs  equipment.rs  finance.rs  lib.rs  market.rs  projects.rs  rng.rs  state.rs  tea.rs  tick.rs
crates/wasm-bridge/: Cargo.toml
crates/wasm-bridge/src/: lib.rs
data/: refinery.json
data/scenarios/: tutorial.json
docs/: lp-formulation.md  market-calibration.md  roadmap.md  vision.md
refinery-lp/: Cargo.toml
refinery-lp/src/: lib.rs  model.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/public/data/: refinery.json
web/public/data/scenarios/: tutorial.json
web/scripts/: sync-data.mjs
web/src/: app.js  charts.js  style.css
