[package]
name = "wasm-bridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sim = { path = "../sim" }
refinery-lp = { path = "../refinery-lp" }
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
console_error_panic_hook.workspace = true
